# vecnopool-frontend

./: .env.example  Cargo.toml  README.md  index.html  mod.rs  package-lock.json  package.json  tailwind.config.js  triggers.sql  vite.config.js
frontend/: index.html  mod.rs  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  input.css
frontend/src/components/: Balances.jsx  Blocks.jsx  Hashrate.jsx  MinerStats.jsx
public/: manifest.json
src/: App.jsx  main.jsx  main.rs  ws.rs
src/api/: balances.rs  blocks.rs  miners.rs  mod.rs
src/components/: Balances.jsx  Blocks.jsx  MinerHashrateStats.jsx  Payments.jsx
src/db/: db.rs
src/models/: balance.rs  block.rs  miner.rs  mod.rs
src/styles/: input.css  mobile.css
