[package]
name = "vecnopool-frontend"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4.8"
actix-cors = "0.7"
actix-web-actors = "4.2"
actix = "0.13"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.38", features = ["full"] }
tokio-postgres = "0.7"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
chrono = "0.4"
serde_json = "1.0"
dashmap = "6.1.0"